--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ body {
 
 hr{
    width: 80%;
+   display: block;
+   height: 1px;
+   border: 0;
+   border-top: 1px solid #999;
 }
 
 .navigation {
